# WHILL_Stereo_cam

./: README.md
libuvc_camera/: CMakeLists.txt  libuvc_camera_nodelet.xml  package.xml
libuvc_camera/include/libuvc_camera/: stereo_driver.h
libuvc_camera/include/xunit/: xunit_lib.h  xunit_tab_lib.h
libuvc_camera/launch/: MP01_left_1MSetereo.1280.launch  MP01_right_1MSetereo.launch  see3cam_1MStereo.launch  see3cam_general.launch  stereo_1MStereo.launch  twin_1MStereo.launch
libuvc_camera/src/: auto_exposure.py  auto_exposure_calculator.py  auto_exposure_master.py  auto_exposure_slave.py  auto_exposure_updater.py  camera_driver.cpp  stereo_driver.cpp  stereo_nodelet.cpp
libuvc_camera/src/xunit/: xunit_lib_whill.c
libuvc_camera/srv/: GetFirmwareVersion.srv  GetFrameRate.srv  GetHDRMode.srv  GetStreamMode.srv  SetFrameRate.srv  SetHDRMode.srv  SetManualExposure.srv  SetStreamMode.srv
libuvc_camera/udev/: 95-econ.rules
libuvc_camera/utils/: change_fps_to_15.sh
